edition = "2023";

package nais.api.protobuf;

import "google/protobuf/timestamp.proto";

option go_package = "./pkg/apiclient/protoapi";

service Agent {
  // Chat sends a message and streams back the response
  rpc Chat(ChatRequest) returns (stream ChatStreamEvent);

  // ListConversations returns all conversations for the authenticated user
  rpc ListConversations(ListConversationsRequest) returns (ListConversationsResponse);

  // GetConversation returns a specific conversation with all its messages
  rpc GetConversation(GetConversationRequest) returns (GetConversationResponse);

  // DeleteConversation deletes a conversation
  rpc DeleteConversation(DeleteConversationRequest) returns (DeleteConversationResponse);
}

// ChatContext contains the user's current UI context
message ChatContext {
  string path = 1;
  string team = 2;
  string app = 3;
  string env = 4;
}

// ChatRequest represents an incoming chat request
message ChatRequest {
  string message = 1;
  ChatContext context = 2;
  string conversation_id = 3;
}

// ChatStreamEventType identifies the type of streaming event
enum ChatStreamEventType {
  CHAT_STREAM_EVENT_TYPE_UNSPECIFIED = 0;
  CHAT_STREAM_EVENT_TYPE_METADATA = 1;
  CHAT_STREAM_EVENT_TYPE_TOOL_START = 2;
  CHAT_STREAM_EVENT_TYPE_TOOL_END = 3;
  CHAT_STREAM_EVENT_TYPE_CONTENT = 4;
  CHAT_STREAM_EVENT_TYPE_SOURCES = 5;
  CHAT_STREAM_EVENT_TYPE_DONE = 6;
  CHAT_STREAM_EVENT_TYPE_ERROR = 7;
}

// ChatStreamEvent represents an event in the streaming response
message ChatStreamEvent {
  ChatStreamEventType type = 1;

  // For METADATA event
  string conversation_id = 2;
  string message_id = 3;

  // For TOOL_START and TOOL_END events
  string tool_name = 4;
  string tool_description = 5;
  bool tool_success = 6;

  // For CONTENT event
  string content = 7;

  // For SOURCES event
  repeated Source sources = 8;

  // For ERROR event
  string error_code = 9;
  string error_message = 10;
}

// Source describes a documentation source used in the response
message Source {
  string title = 1;
  string url = 2;
}

// ListConversationsRequest is the request for listing conversations
message ListConversationsRequest {}

// ListConversationsResponse contains the list of conversations
message ListConversationsResponse {
  repeated ConversationSummary conversations = 1;
}

// ConversationSummary represents a conversation in list view
message ConversationSummary {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp updated_at = 3;
}

// GetConversationRequest is the request for getting a specific conversation
message GetConversationRequest {
  string conversation_id = 1;
}

// GetConversationResponse contains the full conversation
message GetConversationResponse {
  Conversation conversation = 1;
}

// Conversation represents a full conversation with messages
message Conversation {
  string id = 1;
  string title = 2;
  repeated ConversationMessage messages = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// ConversationMessage represents a message in a conversation
message ConversationMessage {
  string id = 1;
  string role = 2;
  string content = 3;
  repeated ToolUsed tools_used = 4;
  google.protobuf.Timestamp created_at = 5;
}

// ToolUsed describes a tool that was invoked
message ToolUsed {
  string name = 1;
  string description = 2;
}

// DeleteConversationRequest is the request for deleting a conversation
message DeleteConversationRequest {
  string conversation_id = 1;
}

// DeleteConversationResponse confirms the deletion
message DeleteConversationResponse {
  bool deleted = 1;
}
